# iperf-exporter

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: iperf_result.rs  main.rs
test_files/: result.json
