[package]
name = "iperf-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
json-pointer = "0.3.4"
prometheus = "0.13.3"
actix-web = "4.4.0"
actix-rt = "2.9.0"
